# docapella

./: .gitignore  .prettierrc  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
crates/docapella/: Cargo.toml
crates/docapella/src/: builder.rs  file_gatherer.rs  lib.rs  main.rs
crates/docapella/src/commands/: build.rs  dev.rs  init.rs
crates/libdoctave/: .gitignore  Cargo.toml  README.md  build.rs
crates/libdoctave/benches/: large_openapi.rs  markdown.rs
crates/libdoctave/bindings/: Ast.ts  Attribute.ts  AttributeValue.ts  Box.ts  Breadcrumb.ts  Build.ts  CodeSelect.ts  CodeTab.ts  ColorMode.ts  Colors.ts  ColorsV2.ts  ColorsV2Description.ts  ContentApiResponse.ts  CurrentNavigation.ts  CurrentPage.ts  DebugInfo.ts  DebugInfoStep.ts  DeviconIcon.ts  DoctaveError.ts  ErrorOptions.ts  ExampleAst.ts  ExternalLink.ts  Favicon.ts  Flex.ts  FlexAlign.ts  FlexDirection.ts  FlexHeight.ts  FlexJustify.ts  FlexWrap.ts  Footer.ts  Grayscale.ts  Grid.ts  HeaderAst.ts  HeaderLink.ts  HeaderSettings.ts  Height.ts  HttpMethod.ts  Icon.ts  IconDescription.ts  Integrations.ts  (+52 more)
crates/libdoctave/boilerplate_project/: README.md  components.md  docapella.yaml  navigation.yaml  tabs.md
crates/libdoctave/boilerplate_project/api/: README.md
crates/libdoctave/examples/: all_markdown_features.rs  basic.rs  github_openapi.rs  partials.rs
crates/libdoctave/examples/all_markdown_features/: README.md  _Navigation.md  doctave.yaml  navigation.yaml
crates/libdoctave/examples/color_generator/: Cargo.toml
crates/libdoctave/examples/color_generator/src/: main.rs
crates/libdoctave/examples/open_api_specs/: broken_internal_link.json  github.yaml  petstore.json  post.json  relative_internal_link.json  tag_order_explicit.yaml  tag_order_extension.yaml  tag_order_inline.yaml  webhook.json
crates/libdoctave/examples/partials/: README.md  doctave.yaml
crates/libdoctave/examples/partials/_partials/: one.md
crates/libdoctave/examples/project_basic/: README.md  _Navigation.md  navigation.yaml
crates/libdoctave/src/: breadcrumb.rs  colors.rs  content_api.rs  description_extractor.rs  error_options.rs  frontmatter.rs  icon.rs  lib.rs  markdown.rs  markdown_navigation.rs  markdown_page.rs  navigation.rs  open_api.rs  open_api_page.rs  page_handle.rs  page_kind.rs  project.rs  render_context.rs  render_options.rs  renderer.rs  search_index.rs  settings.rs  settings.rs.bak  slug.rs  structure.rs  structure_v2.rs  tabs.rs  utils.rs  vale.rs
crates/libdoctave/src/color_generator/: color_utils.rs  mod.rs  radix.rs  stylesheets.rs
crates/libdoctave/src/markdown/: anchorizer.rs  attribute_parser.rs  autocomplete.rs  content_ast.rs  error_renderer.rs  interpreter.rs  markdown_rs_error_wrapper.rs  parser.rs  parser.rs.bak  renderable_ast.rs  sanitizer.rs  shared_ast.rs
crates/libdoctave/src/markdown/composite_components/: Button.md  Callout.md  Card.md  Fragment.md  Icon.md  Image.md  Link.md
crates/libdoctave/src/markdown/control_flow/: conditional.rs
crates/libdoctave/src/markdown/custom_components/: attribute.rs  custom_component.rs  mod.rs
crates/libdoctave/src/markdown/expressions/: filters.rs  interpreter.rs  mod.rs  parser.rs  tokenizer.rs
crates/libdoctave/src/markdown/primitive_components/: box.rs  code_tabs.rs  flex.rs  grid.rs  mod.rs  steps.rs  tabs.rs
crates/libdoctave/src/open_api/: ast.rs  ast.rs.bak  model.rs  overview.rs  view.rs
crates/libdoctave/src/templates/: colors.html  colors.html.jinja  css-builtin-components.css  css-header.css  css-mobile-nav.css  css-openapi.css  css-prose.css  css-prose.html  css-search-modal.css  css.html  css.html.jinja  font.html  font.html.jinja  footer.html  footer.html.jinja  javascript-libraries.html  javascript-libraries.html.jinja
crates/libdoctave/src/templates/components/: box.html.jinja  breadcrumbs.html.jinja  code_select.html.jinja  flex.html.jinja  grid.html.jinja  header.html  header.html.jinja  markdown.html  markdown.html.jinja  md_tabs.html.jinja  mobile-navigation.html.jinja  navigation.html  (+15 more)
crates/libdoctave/tests/: boilerplate.rs  common.rs  html_helpers.rs
crates/libdoctave/tests/fixtures/: post.json  post_with_example.json
crates/openapi_parser/: Cargo.toml
crates/openapi_parser/benches/: openapi.rs
crates/openapi_parser/src/: lib.rs
crates/openapi_parser/src/openapi30/: parser.rs
crates/openapi_parser/tests/: e2e.rs
(+179 files in other folders)
