[package]
name = "libdoctave"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[[bin]]
name = "libdoctave"
test = false
bench = false

[[bench]]
name = "large_openapi"
harness = false

[[bench]]
name = "markdown"
harness = false

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi_parser = { path = "../openapi_parser" }
color-generator = { path = "../color-generator" }
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9"
serde_json = { version = "1", features = ["preserve_order"] }
url = "2"
indoc = "1"
walkdir = "2"
lazy_static = "1"
indexmap = "=1.9.3"
rayon = "1.5"
uriparse = "0.6"
deunicode = "=1.4.0"
itermap = "0.2.2"
unix_path = "1.0.1"
include_dir = "0.7.3"
palette = "0.7.3"
markdown_rs = { rev="5f781cdbf08801706479032d22c6c4fb64dc6c7d", package="markdown", git="https://github.com/wooorm/markdown-rs" }
regex = "1.10.3"
thiserror = "1.0.24"
itertools = "0.12.1"
located_yaml = "0.2.1"
lightningcss = "1.0.0-alpha.55"
csscolorparser = "0.6.2"
rust_decimal = { version = "1.35.0", features = [] }
pathdiff = "0.2.1"
minijinja = { version = "2.11.0", features = ["json"] }
minijinja-embed = "2.11.0"
elasticlunr-rs = "3.0.2"

[dev-dependencies]
pretty_assertions = "1.1.0"
tl = "0.7.7"
criterion = { version = "0.3", features = ["html_reports"] }
stacker = "0.1"
# Override psm (stacker depdendency) version to fix build errors caused by 0.1.22
psm = "=0.1.21"

[build-dependencies]
minijinja-embed = "2.11.0"
