[package]
name = "openapi_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "openapi"
harness = false

[dependencies]
im = { version = "15.1.0", features = ["serde"]}
indexmap = { version = "2.3.0" , features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_json_lenient = "0.2.1"
serde_yaml = "0.9.34"
smartstring = { version = "1.0.1", features = ["serde"] }
thiserror = "1.0.63"

[dev-dependencies]
pretty_assertions = "1.1.0"
indoc = "1"
criterion = { version = "0.3", features = ["html_reports"] }
